Kubernetes/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  ports:
  - name: "8091"
    port: 8091
    targetPort: 8080
  selector:
    io.kompose.service: adminer
status:
  loadBalancer: {}
